# n-scope

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/n_scope/: app.py  cli.py  config.py  git.py  styles.tcss
tests/: conftest.py  test_app.py  test_cli.py  test_config.py  test_git.py
