[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "n-scope"
version = "0.3.0"
description = "Pretty TUI for surveying git repositories"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Naevor" },
]
keywords = ["git", "tui", "terminal", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "textual>=0.50",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
n-scope = "n_scope.cli:main"

[project.urls]
Homepage = "https://github.com/naevor/n-scope"
Issues = "https://github.com/naevor/n-scope/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/n_scope"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
